tests/types/errors/assign_handle_foreign_type.mog

const counter = @import("counter")
const window = @import("window")

const source counter.Counter = counter.create(1i64)
const bad window.Window = source
